message ElementCss {
    optional string animationDelay = 1;
    optional string animationDirection = 2;
    optional string animationDuration = 3;
    optional string animationFillMode = 4;
    optional string animationIterationCount = 5;
    optional string animationName = 6;
    optional string animationPlayState = 7;
    optional string animationTimingFunction = 8;
    optional string backgroundAttachment = 9;
    optional string backgroundBlendMode = 10;
    optional string backgroundClip = 11;
    optional string backgroundColor = 12;
    optional string backgroundImage = 13;
    optional string backgroundOrigin = 14;
    optional string backgroundPosition = 15;
    optional string backgroundRepeat = 16;
    optional string backgroundSize = 17;
    optional string borderBottomColor = 18;
    optional string borderBottomLeftRadius = 19;
    optional string borderBottomRightRadius = 20;
    optional string borderBottomStyle = 21;
    optional string borderBottomWidth = 22;
    optional string borderCollapse = 23;
    optional string borderImageOutset = 24;
    optional string borderImageRepeat = 25;
    optional string borderImageSlice = 26;
    optional string borderImageSource = 27;
    optional string borderImageWidth = 28;
    optional string borderLeftColor = 29;
    optional string borderLeftStyle = 30;
    optional string borderLeftWidth = 31;
    optional string borderRightColor = 32;
    optional string borderRightStyle = 33;
    optional string borderRightWidth = 34;
    optional string borderTopColor = 35;
    optional string borderTopLeftRadius = 36;
    optional string borderTopRightRadius = 37;
    optional string borderTopStyle = 38;
    optional string borderTopWidth = 39;
    optional string bottom = 40;
    optional string boxShadow = 41;
    optional string boxSizing = 42;
    optional string captionSide = 43;
    optional string clear = 44;
    optional string clip = 45;
    optional string color = 46;
    optional string cursor = 47;
    optional string direction = 48;
    optional string display = 49;
    optional string emptyCells = 50;
    optional string float = 51;
    optional string fontFamily = 52;
    optional string fontKerning = 53;
    optional string fontSize = 54;
    optional string fontStretch = 55;
    optional string fontStyle = 56;
    optional string fontVariant = 57;
    optional string fontVariantLigatures = 58;
    optional string fontWeight = 59;
    optional string height = 60;
    optional string imageRendering = 61;
    optional string isolation = 62;
    optional string left = 63;
    optional string letterSpacing = 64;
    optional string lineHeight = 65;
    optional string listStyleImage = 66;
    optional string listStylePosition = 67;
    optional string listStyleType = 68;
    optional string marginBottom = 69;
    optional string marginLeft = 70;
    optional string marginRight = 71;
    optional string marginTop = 72;
    optional string maxHeight = 73;
    optional string maxWidth = 74;
    optional string minHeight = 75;
    optional string minWidth = 76;
    optional string mixBlendMode = 77;
    optional string objectFit = 78;
    optional string objectPosition = 79;
    optional string opacity = 80;
    optional string orphans = 81;
    optional string outlineColor = 82;
    optional string outlineOffset = 83;
    optional string outlineStyle = 84;
    optional string outlineWidth = 85;
    optional string overflowWrap = 86;
    optional string overflowX = 87;
    optional string overflowY = 88;
    optional string paddingBottom = 89;
    optional string paddingLeft = 90;
    optional string paddingRight = 91;
    optional string paddingTop = 92;
    optional string pageBreakAfter = 93;
    optional string pageBreakBefore = 94;
    optional string pageBreakInside = 95;
    optional string pointerEvents = 96;
    optional string position = 97;
    optional string resize = 98;
    optional string right = 99;
    optional string speak = 100;
    optional string tableLayout = 101;
    optional string tabSize = 102;
    optional string textAlign = 103;
    optional string textDecoration = 104;
    optional string textIndent = 105;
    optional string textRendering = 106;
    optional string textShadow = 107;
    optional string textOverflow = 108;
    optional string textTransform = 109;
    optional string top = 110;
    optional string touchAction = 111;
    optional string transitionDelay = 112;
    optional string transitionDuration = 113;
    optional string transitionProperty = 114;
    optional string transitionTimingFunction = 115;
    optional string unicodeBidi = 116;
    optional string verticalAlign = 117;
    optional string visibility = 118;
    optional string whiteSpace = 119;
    optional string widows = 120;
    optional string width = 121;
    optional string willChange = 122;
    optional string wordBreak = 123;
    optional string wordSpacing = 124;
    optional string wordWrap = 125;
    optional string zIndex = 126;
    optional string zoom = 127;
    optional string webkitAppearance = 128;
    optional string backfaceVisibility = 129;
    optional string webkitBackgroundClip = 130;
    optional string webkitBackgroundComposite = 131;
    optional string webkitBackgroundOrigin = 132;
    optional string webkitBorderHorizontalSpacing = 133;
    optional string webkitBorderImage = 134;
    optional string webkitBorderVerticalSpacing = 135;
    optional string webkitBoxAlign = 136;
    optional string webkitBoxDecorationBreak = 137;
    optional string webkitBoxDirection = 138;
    optional string webkitBoxFlex = 139;
    optional string webkitBoxFlexGroup = 140;
    optional string webkitBoxLines = 141;
    optional string webkitBoxOrdinalGroup = 142;
    optional string webkitBoxOrient = 143;
    optional string webkitBoxPack = 144;
    optional string webkitBoxReflect = 145;
    optional string webkitClipPath = 146;
    optional string webkitColumnBreakAfter = 147;
    optional string webkitColumnBreakBefore = 148;
    optional string webkitColumnBreakInside = 149;
    optional string webkitColumnCount = 150;
    optional string webkitColumnGap = 151;
    optional string webkitColumnRuleColor = 152;
    optional string webkitColumnRuleStyle = 153;
    optional string webkitColumnRuleWidth = 154;
    optional string webkitColumnSpan = 155;
    optional string webkitColumnWidth = 156;
    optional string webkitFilter = 157;
    optional string alignContent = 158;
    optional string alignItems = 159;
    optional string alignSelf = 160;
    optional string flexBasis = 161;
    optional string flexGrow = 162;
    optional string flexShrink = 163;
    optional string flexDirection = 164;
    optional string flexWrap = 165;
    optional string justifyContent = 166;
    optional string webkitFontSmoothing = 167;
    optional string webkitHighlight = 168;
    optional string webkitHyphenateCharacter = 169;
    optional string webkitLineBoxContain = 170;
    optional string webkitLineBreak = 171;
    optional string webkitLineClamp = 172;
    optional string webkitLocale = 173;
    optional string webkitMarginBeforeCollapse = 174;
    optional string webkitMarginAfterCollapse = 175;
    optional string webkitMaskBoxImage = 176;
    optional string webkitMaskBoxImageOutset = 177;
    optional string webkitMaskBoxImageRepeat = 178;
    optional string webkitMaskBoxImageSlice = 179;
    optional string webkitMaskBoxImageSource = 180;
    optional string webkitMaskBoxImageWidth = 181;
    optional string webkitMaskClip = 182;
    optional string webkitMaskComposite = 183;
    optional string webkitMaskImage = 184;
    optional string webkitMaskOrigin = 185;
    optional string webkitMaskPosition = 186;
    optional string webkitMaskRepeat = 187;
    optional string webkitMaskSize = 188;
    optional string order = 189;
    optional string perspective = 190;
    optional string perspectiveOrigin = 191;
    optional string webkitPrintColorAdjust = 192;
    optional string webkitRtlOrdering = 193;
    optional string shapeOutside = 194;
    optional string shapeImageThreshold = 195;
    optional string shapeMargin = 196;
    optional string webkitTapHighlightColor = 197;
    optional string webkitTextCombine = 198;
    optional string webkitTextDecorationsInEffect = 199;
    optional string webkitTextEmphasisColor = 200;
    optional string webkitTextEmphasisPosition = 201;
    optional string webkitTextEmphasisStyle = 202;
    optional string webkitTextFillColor = 203;
    optional string webkitTextOrientation = 204;
    optional string webkitTextSecurity = 205;
    optional string webkitTextStrokeColor = 206;
    optional string webkitTextStrokeWidth = 207;
    optional string transform = 208;
    optional string transformOrigin = 209;
    optional string transformStyle = 210;
    optional string webkitUserDrag = 211;
    optional string webkitUserModify = 212;
    optional string webkitUserSelect = 213;
    optional string webkitWritingMode = 214;
    optional string webkitAppRegion = 215;
    optional string bufferedRendering = 216;
    optional string clipPath = 217;
    optional string clipRule = 218;
    optional string mask = 219;
    optional string filter = 220;
    optional string floodColor = 221;
    optional string floodOpacity = 222;
    optional string lightingColor = 223;
    optional string stopColor = 224;
    optional string stopOpacity = 225;
    optional string colorInterpolation = 226;
    optional string colorInterpolationFilters = 227;
    optional string colorRendering = 228;
    optional string fill = 229;
    optional string fillOpacity = 230;
    optional string fillRule = 231;
    optional string markerEnd = 232;
    optional string markerMid = 233;
    optional string markerStart = 234;
    optional string maskType = 235;
    optional string shapeRendering = 236;
    optional string stroke = 237;
    optional string strokeDasharray = 238;
    optional string strokeDashoffset = 239;
    optional string strokeLinecap = 240;
    optional string strokeLinejoin = 241;
    optional string strokeMiterlimit = 242;
    optional string strokeOpacity = 243;
    optional string strokeWidth = 244;
    optional string alignmentBaseline = 245;
    optional string baselineShift = 246;
    optional string dominantBaseline = 247;
    optional string textAnchor = 248;
    optional string writingMode = 249;
    optional string glyphOrientationHorizontal = 250;
    optional string glyphOrientationVertical = 251;
    optional string vectorEffect = 252;
    optional string paintOrder = 253;
    optional string cx = 254;
    optional string cy = 255;
    optional string x = 256;
    optional string y = 257;
    optional string r = 258;
    optional string rx = 259;
    optional string ry = 260;
}


message ElementAttribute {
    optional string           key = 1;
    optional string           value = 2;
}


message ElementNodeData {
    optional string           tagName = 1;
    optional ElementCss       css = 2;
    repeated ElementAttribute attributes = 3;
    repeated NodeData         children = 4;
}

message TextNodeData {
    optional string           text = 1;
}


message NodeData {
    optional string           id = 1;
    optional ElementNodeData  elementData = 2;
    optional TextNodeData     textData = 3;
}